# chisel_gowin_mcu

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  build  build.sbt  build.sc  chisel_gowin_mcu.code-workspace  zephyr-env.fish  zephyr-env.sh
.github/: SECURITY.md
.github/workflows/: test.yml
boards/arm/szfpga_gw1nsr4c/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  szfpga_gw1nsr4c.cst  szfpga_gw1nsr4c.dts  szfpga_gw1nsr4c_defconfig
boards/arm/tangnano4k/: Kconfig  Kconfig.board  Kconfig.defconfig  tangnano4k.cst  tangnano4k.dts  tangnano4k.sdc  tangnano4k_defconfig
boards/common/: openFPGALoader.board.cmake
cmake/: logic.cmake  project.cmake
drivers/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.gowin_empu_gpio  gowin_empu_gpio.c
drivers/zephyr/: module.yml
dts/arm/gowin/empu/: gwempu.dtsi  gwempu_gw1nsr4c.dtsi
dts/bindings/: gowin,empu_gpio.yaml  vendor-prefixes.txt
dts/bindings/serial/: gowin,empu_uart.yaml
logic/dts/: szfpga_gw1nsr4c.overlay
patches/zephyr/: 0001-add-support-for-openFPGAloader.patch
platform/chisel/: .gitignore  chisel.gprj  chisel.gwsh
platform/chisel/src/: chisel.cst  chisel.rao
platform/chisel/src/gowin_empu/: gowin_empu.ipc  gowin_empu.v  gowin_empu.vo
platform/tangnano4k/: mcu.gprj
platform/tangnano4k/src/: TangNano4k.v  mcu.cst  mcu.rao  mcu.sdc
samples/basic/blinky/: CMakeLists.txt  Kconfig
samples/basic/camera/logic/: tangnano4k.gwsh
samples/basic/camera/src/: main.c
samples/modelbasedesign/blinky/: .gitignore  CMakeLists.txt  model.cmake
samples/modelbasedesign/blinky/model/: makefile  model.m  model.slx
samples/modelbasedesign/blinky/model/model_ert_rtw/: model.c  model.h
samples/modelbasedesign/blinky/model/simulink_led_ert_rtw/: rtwtypes.h  simulink_led.c  simulink_led.h  simulink_led_private.h  simulink_led_types.h
samples/modelbasedesign/blinky/src/: main.c
scripts/logic/gowin/: gen_compilescript.bash
soc/arm/gowin/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/arm/gowin/gwempu/: CMakeLists.txt  Kconfig.defconfig.gwempu  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  gwempu_regs.h  soc.c  soc.h
software/01_minimum/: blink.S  blink.ld  makefile
src/: main.c
src/main/ps/: .gitignore  boot.S  link.ld  main.c  makefile  openocd.cfg
src/main/scala/basic/: led_blink.scala
src/main/scala/components/: rom.scala
src/main/scala/ipcores/: gowin_emcu_module.scala
src/main/scala/macro/: emcu.scala  flash.scala  sram.scala
(+30 files in other folders)
